--- a/drone_ws/src/custom_msgs/CMakeLists.txt
+++ b/drone_ws/src/custom_msgs/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(px4_controller)
-# set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+project(custom_msgs)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,29 +7,17 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(geometry_msgs REQUIRED)
-find_package(custom_msgs REQUIRED)
-find_package(tf2 REQUIRED)
-find_package(tf2_ros REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
-find_package(MAVSDK REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
 
-
-add_executable(drone_node src/drone_node.cpp)
-target_link_libraries(drone_node MAVSDK::mavsdk)
-ament_target_dependencies(drone_node rclcpp std_msgs geometry_msgs custom_msgs tf2 tf2_ros MAVSDK)
-
-target_include_directories(drone_node PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-target_compile_features(drone_node PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
-
-install(TARGETS drone_node
-  DESTINATION lib/${PROJECT_NAME})
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/LocalPosVel.msg"
+  DEPENDENCIES std_msgs
+  ADD_LINTER_TESTS
+ )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
