--- a/drone_ws/src/custom_msgs/package.xml
+++ b/drone_ws/src/custom_msgs/package.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>px4_controller</name>
+  <name>custom_msgs</name>
   <version>0.0.0</version>
-  <description>Package containing px4 controller node</description>
+  <description>Package with custom interfaces</description>
   <maintainer email="imad.issafras@mail.mcgill.ca">unhappysquid</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
-  <depend>custom_msgs</depend>
-  <depend>tf2</depend>
-  <depend>tf2_ros</depend>
-
+  <build_depend>rosidl_default_generators</build_depend>
+  
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
